corrected path fr background image and made initial date visible on background

--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,11 @@ html {
 }
 
 body {
-  background-image: url("images/space-carina.png");
+  background-image: url("/images/space-carina.png");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.todaysDate {
+  color: whitesmoke;
 }
